[package]
name = "omni-relayer-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde_json = "1"
clap = { version = "4.5.47", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs"] }
futures = "0.3"

dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.28"

near-jsonrpc-client = "0.18"
near-jsonrpc-primitives = "0.31.1"
near-primitives = "0.31.1"
near-crypto = "0.31.1"
omni-types = { git = "https://github.com/near-one/omni-bridge", package = "omni-types", rev = "1ff51b59fc0b10b7ed8ff47f0dcf20fe0fbb5735" }
